Bug: Members list not scrollable on smaller screen sizes (#226)
* Bug: Members list not scrollable on smaller screen sizes

Bug: Members list not scrollable on smaller screen sizes

Bug: Members list not scrollable on smaller screen sizes

Bug: Members list not scrollable on smaller screen sizes

* Bug: Members list not scrollable on smaller screen sizes

* Bug: Members list not scrollable on smaller screen sizes

--- a/src/members/Member.css
+++ b/src/members/Member.css
@@ -1,50 +1,56 @@
 .container-members {
-    background: #f7f9fa;
-    height: auto;
-    width: 90vw;
-    margin: 5em auto;
-    -webkit-box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.4);
-    -moz-box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.4);
-    box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.4);
-  }
-  
+  background: #f7f9fa;
+  height: auto;
+  width: 90vw;
+  margin: 5em auto;
+  -webkit-box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.4);
+  -moz-box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.4);
+  box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.4);
+}
+
 label {
-    color: #24b9b6;
-    font-size: 1.2em;
-    font-weight: 400;
+  color: #24b9b6;
+  font-size: 1.2em;
+  font-weight: 400;
+}
+
+h1 {
+  color: #24b9b6;
+  padding-top: 0.5em;
+}
+
+.error {
+  color: red;
+}
+.error-message {
+  color: #ff6565;
+  padding: 0.5em 0.2em;
+  height: 1em;
+  position: absolute;
+  font-size: 0.8em;
+}
+
+.field {
+  border: 1px solid #1c6ea4;
+  width: 100%;
+  height: 2em;
+}
+
+.button-group {
+  width: 100%;
+}
+
+.membersList {
+  width: 85vw;
+  text-align: center;
+  padding: 2em;
+  margin: 3em 3em;
+  padding: 2em;
+}
+
+@media only screen and (max-width: 644px) {
+  .container-members {
+    overflow: auto;
+    overflow-x: scroll;
   }
-  
-  h1 {
-    color: #24b9b6;
-    padding-top: 0.5em;
-  }
-  
-  .error {
-    color: red;
-  }
-  .error-message {
-    color: #ff6565;
-    padding: 0.5em 0.2em;
-    height: 1em;
-    position: absolute;
-    font-size: 0.8em;
-  }
-  
-  .field {
-    border: 1px solid #1c6ea4;
-    width: 100%;
-    height: 2em;
-  }
-  
-  .button-group {
-    width: 100%;
-  }
-  
-  .membersList {
-    width: 85vw;
-    text-align: center;
-    padding: 2em;
-    margin: 3em 3em;
-    padding: 2em;
-  }
-  
+}
